# lsar

./: .gitignore  .taurignore  README.md  biome.json  package.json  tsconfig.json  vite.config.ts
.github/: changelog-configuration.json
.github/workflows/: nightly.yml  publish.yml
.scripts/: mirror-latest-json.js
docs/images/: dark.avif  light.avif
src/: App.scss  App.tsx  command.ts  context.ts  index.scss  index.tsx  lazy.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  error.rs  eval.rs  global.rs  history.rs  http.rs  lib.rs  log.rs  main.rs  path.rs  platform.rs  setup.rs  update.rs  utils.rs
src-tauri/src/parser/: http_client.rs  mod.rs  time.rs
src-tauri/src/parser/bilibili/: bilibili_parser.rs  cookie_verifier.rs  html_fetcher.rs  link_parser.rs  mod.rs  room_info_fetcher.rs  room_play_info_fetcher.rs
src-tauri/src/parser/douyin/: mod.rs  models.rs  utils.rs
src-tauri/src/parser/douyu/: constants.rs  http_client.rs  mod.rs  models.rs  room_info_fetcher.rs  room_page_fetcher.rs  signature_generator.rs  stream_info_parser.rs
src-tauri/src/parser/huya/: anticode_parser.rs  html_parser.rs  login_request.rs  mod.rs  models.rs  url.rs  uuid.rs
src/components/about/: index.scss  index.tsx
src/components/history/: index.scss  index.tsx  item.tsx
src/components/result/: index.scss  index.tsx
src/parser/: base.ts  index.ts  utils.ts  validators.ts
types/: config.d.ts  context.d.ts  http.d.ts  index.d.ts
(+13 files in other folders)
