[package]
name = "lsar"
version = "0.1.0"
description = "直播解析工具"
authors = ["thep0y"]
edition = "2021"

[lib]
name = "lsar_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
time = { version = "0", features = ['macros', 'serde'] }
tracing = { version = "0", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0", features = [
    'time',
    'env-filter',
    'json',
] }
tracing-appender = '0'
thiserror = "1"
sqlx = { version = "0", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
    "time",
] }
dirs = "5"
window-vibrancy = "0"
md-5 = "0"
reqwest = { version = "0", features = ["json"] }
toml = "0"
open = "5"

tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
